--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
           ></textarea>
         </div>
 
+        <form class="selectors">
+            <label for="passwordLength">Password Length (Max. 128)</label>
+            <input type="number" min="8" max="128" value="8">
+
+            <label for="includeLowercase">Include Lowercase</label>
+            <input type="checkbox" id="includeLowercase">
+
+            <label for="includeUppercase">Include Uppercase</label>
+            <input type="checkbox" id="includeUppercase">
+
+            <label for="includeNumbers">Include Numbers</label>
+            <input type="checkbox" id="includeNumbers">
+
+            <label for="includeSpecialCharacters">Include Special Characters</label>
+            <input type="checkbox" id="includeSpecialCharacters">
+        </form>
+       
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
