--- a/index.html
+++ b/index.html
@@ -30,13 +30,11 @@
 
         <form class="selectors">
             <label for="passwordLength">Password Length (Max. 128)</label>
-            <input type="number" min="8" max="128" value="8">
-
-            <label for="includeLowercase">Include Lowercase</label>
-            <input type="checkbox" id="includeLowercase">
+            <input type="number" id = "numberClick" min="8" max="128" value="8">
 
             <label for="includeUppercase">Include Uppercase</label>
             <input type="checkbox" id="includeUppercase">
+            <span class="slider round"></span>
 
             <label for="includeNumbers">Include Numbers</label>
             <input type="checkbox" id="includeNumbers">
