added comments on functionality of code in script and added HTML form

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             aria-label="Generated Password"
           ></textarea>
         </div>
-
+<!-- added selectors, rather than using windo prompts to pass information to script -->
         <form class="selectors">
             <label for="passwordLength">Password Length (Max. 128)</label>
             <input type="number" id = "numberClick" min="8" max="128" value="8">
